--- a/MegaDesk/MegaDesk/Pages/Quotes/Create.cshtml
+++ b/MegaDesk/MegaDesk/Pages/Quotes/Create.cshtml
@@ -19,42 +19,54 @@
             </div>
             <div class="form-group">
                 <label asp-for="DeskQuote.CustomerName" class="control-label"></label>
-                <input asp-for="DeskQuote.CustomerName" class="form-control" />
+                <input asp-for="DeskQuote.CustomerName" class="form-control" placeholder="John Smith"/>
                 <span asp-validation-for="DeskQuote.CustomerName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="DeskQuote.Width" class="control-label"></label>
-                <input asp-for="DeskQuote.Width" class="form-control" />
+                <input asp-for="DeskQuote.Width" class="form-control" placeholder="min 24in - max 96in" />
                 <span asp-validation-for="DeskQuote.Width" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="DeskQuote.Deep" class="control-label"></label>
-                <input asp-for="DeskQuote.Deep" class="form-control" />
+                <input asp-for="DeskQuote.Deep" class="form-control" placeholder=" min 12in- max 46in" />
                 <span asp-validation-for="DeskQuote.Deep" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="DeskQuote.Drawers" class="control-label"></label>
 
-                <input type="number" min="0" max="7" asp-for="DeskQuote.Drawers" class="form-control" />
+                <input type="number" min="0" max="7" asp-for="DeskQuote.Drawers" class="form-control"  placeholder="0 - 7" />
                 <span asp-validation-for="DeskQuote.Drawers" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="DeskQuote.Material" class="control-label"></label>
-                <div class="col-sm-10">
-                    <select asp-for="DeskQuote.Material">
-                        <option selected="selected" value="">Select a Material </option>
-                        <option value="Oak">Oak</option>
-                        <option value="Laminate">Laminate</option>
-                        <option value="Pine">Pine</option>
-                        <option value="Rosewood">Rosewood</option>
-                        <option value="Veneer">Veneer</option>
-                    </select>
-                </div>
+                <br />
+
+                <input type="radio" asp-for="DeskQuote.Material" value="Oak" />
+                <label asp-for="DeskQuote.Material">Oak</label>
+                <img class="img_surface" src="~/img/oak.jpg" />
+
+                <input type="radio" asp-for="DeskQuote.Material" value="Laminate" />
+                <label asp-for="DeskQuote.Material">Laminate</label>
+                <img class="img_surface" src="~/img/laminate.jpg" />
+
+                <input type="radio" asp-for="DeskQuote.Material" value="Pine" />
+                <label asp-for="DeskQuote.Material">Pine</label>
+                <img class="img_surface" src="~/img/pine.jpg" />
+
+                <input type="radio" asp-for="DeskQuote.Material" value="Rosewood" />
+                <label asp-for="DeskQuote.Material">Rosewood</label>
+                <img class="img_surface" src="~/img/rosewood.jpg" />
+
+                <input type="radio" asp-for="DeskQuote.Material" value="Veneer" />
+                <label asp-for="DeskQuote.Material">Veneer</label>
+                <img class="img_surface" src="~/img/veneer.jpg" />
+
             </div>
             <div class="form-group">
                 <label asp-for="DeskQuote.Shipping" class="control-label"></label>
                 <div class="col-sm-10">
-                    <select asp-for="DeskQuote.Material">
+                    <select asp-for="DeskQuote.Shipping">
                         <option selected="selected" value="">Select a Shipping Method </option>
                         <option value="3">3 Days</option>
                         <option value="5">5 Days</option>
