--- a/MegaDesk/MegaDesk/Pages/Quotes/Details.cshtml
+++ b/MegaDesk/MegaDesk/Pages/Quotes/Details.cshtml
@@ -27,13 +27,13 @@
             @Html.DisplayNameFor(model => model.DeskQuote.Width)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.DeskQuote.Width)
+            @Html.DisplayFor(model => model.DeskQuote.Width) in
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.DeskQuote.Deep)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.DeskQuote.Deep)
+            @Html.DisplayFor(model => model.DeskQuote.Deep) in
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.DeskQuote.Drawers)
@@ -51,7 +51,7 @@
             @Html.DisplayNameFor(model => model.DeskQuote.Shipping)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.DeskQuote.Shipping)
+            @Html.DisplayFor(model => model.DeskQuote.Shipping) Days
         </dd>
     </dl>
 </div>
