--- a/MegaDesk/MegaDesk/Pages/Quotes/Edit.cshtml
+++ b/MegaDesk/MegaDesk/Pages/Quotes/Edit.cshtml
@@ -41,12 +41,24 @@
             </div>
             <div class="form-group">
                 <label asp-for="DeskQuote.Material" class="control-label"></label>
-                <input asp-for="DeskQuote.Material" class="form-control" />
+                <select asp-for="DeskQuote.Material">
+                    <option value="Oak">Oak</option>
+                    <option value="Laminate">Laminate</option>
+                    <option value="Pine">Pine</option>
+                    <option value="Rosewood">Rosewood</option>
+                    <option value="Veneer">Veneer</option>
+
+                </select>                
                 <span asp-validation-for="DeskQuote.Material" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="DeskQuote.Shipping" class="control-label"></label>
-                <input asp-for="DeskQuote.Shipping" class="form-control" />
+                <select asp-for="DeskQuote.Shipping">
+                    <option value="3">3 Days</option>
+                    <option value="5">5 Days</option>
+                    <option value="7">7 Days</option>
+                    <option value="14">14 Days</option>
+                </select>               
                 <span asp-validation-for="DeskQuote.Shipping" class="text-danger"></span>
             </div>
             <div class="form-group">
