--- a/MegaDesk/MegaDesk/Pages/Quotes/Delete.cshtml
+++ b/MegaDesk/MegaDesk/Pages/Quotes/Delete.cshtml
@@ -7,7 +7,7 @@
 
 <h1>Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3 class="warning">Are you sure you want to delete this?</h3>
 <div>
     <h4>DeskQuote</h4>
     <hr />
