--- a/MegaDesk/MegaDesk/Pages/Quotes/Details.cshtml
+++ b/MegaDesk/MegaDesk/Pages/Quotes/Details.cshtml
@@ -8,7 +8,7 @@
 <h1>Details</h1>
 
 <div>
-    <h4>DeskQuote</h4>
+    <h4 class="sub-title">DeskQuote</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
