--- a/MegaDesk/MegaDesk/Pages/Quotes/Edit.cshtml
+++ b/MegaDesk/MegaDesk/Pages/Quotes/Edit.cshtml
@@ -49,7 +49,7 @@
                 <input asp-for="DeskQuote.Shipping" class="form-control" />
                 <span asp-validation-for="DeskQuote.Shipping" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group-submit">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
