Updated the homepage css

--- a/MegaDesk/MegaDesk/Pages/Index.cshtml
+++ b/MegaDesk/MegaDesk/Pages/Index.cshtml
@@ -4,7 +4,10 @@
     ViewData["Title"] = "Home page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+
+    <div class="text-center">
+        <h1 class="display-4">Welcome to MegaDesk</h1>
+        <p>Use our tool and schedule your new desktop with the best materials. </p>
+
+        <a asp-page="/Quotes/Index" class="btn btn-primary">Start</a>
+    </div>
