--- a/MegaDesk/MegaDesk/wwwroot/css/site.css
+++ b/MegaDesk/MegaDesk/wwwroot/css/site.css
@@ -129,3 +129,8 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+
+header {
+    margin-bottom:80px;
+}
