--- a/MegaDesk/MegaDesk/Pages/Quotes/Edit.cshtml
+++ b/MegaDesk/MegaDesk/Pages/Quotes/Edit.cshtml
@@ -16,49 +16,68 @@
             <input type="hidden" asp-for="DeskQuote.ID" />
             <div class="form-group">
                 <label asp-for="DeskQuote.Date" class="control-label"></label>
+                <br />
                 <input asp-for="DeskQuote.Date" class="form-control" />
                 <span asp-validation-for="DeskQuote.Date" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="DeskQuote.CustomerName" class="control-label"></label>
+                <br />
                 <input asp-for="DeskQuote.CustomerName" class="form-control" />
                 <span asp-validation-for="DeskQuote.CustomerName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="DeskQuote.Width" class="control-label"></label>
+                <br />
                 <input asp-for="DeskQuote.Width" class="form-control" />
                 <span asp-validation-for="DeskQuote.Width" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="DeskQuote.Deep" class="control-label"></label>
+                <br />
                 <input asp-for="DeskQuote.Deep" class="form-control" />
                 <span asp-validation-for="DeskQuote.Deep" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="DeskQuote.Drawers" class="control-label"></label>
+                <br />
                 <input asp-for="DeskQuote.Drawers" class="form-control" />
                 <span asp-validation-for="DeskQuote.Drawers" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="DeskQuote.Material" class="control-label"></label>
-                <select asp-for="DeskQuote.Material">
-                    <option value="Oak">Oak</option>
-                    <option value="Laminate">Laminate</option>
-                    <option value="Pine">Pine</option>
-                    <option value="Rosewood">Rosewood</option>
-                    <option value="Veneer">Veneer</option>
+                <br />
+                <div class="form-group-radio">
+                    <input type="radio" asp-for="DeskQuote.Material" value="Oak" />
+                    <label asp-for="DeskQuote.Material">Oak</label>
+                    <img class="img_surface" src="~/img/oak.jpg" />
 
-                </select>                
-                <span asp-validation-for="DeskQuote.Material" class="text-danger"></span>
+                    <input type="radio" asp-for="DeskQuote.Material" value="Laminate" />
+                    <label asp-for="DeskQuote.Material">Laminate</label>
+                    <img class="img_surface" src="~/img/laminate.jpg" />
+
+                    <input type="radio" asp-for="DeskQuote.Material" value="Pine" />
+                    <label asp-for="DeskQuote.Material">Pine</label>
+                    <img class="img_surface" src="~/img/pine.jpg" />
+
+                    <input type="radio" asp-for="DeskQuote.Material" value="Rosewood" />
+                    <label asp-for="DeskQuote.Material">Rosewood</label>
+                    <img class="img_surface" src="~/img/rosewood.jpg" />
+
+                    <input type="radio" asp-for="DeskQuote.Material" value="Veneer" />
+                    <label asp-for="DeskQuote.Material">Veneer</label>
+                    <img class="img_surface" src="~/img/veneer.jpg" />
+                </div>
             </div>
             <div class="form-group">
                 <label asp-for="DeskQuote.Shipping" class="control-label"></label>
+                <br />
                 <select asp-for="DeskQuote.Shipping">
                     <option value="3">3 Days</option>
                     <option value="5">5 Days</option>
                     <option value="7">7 Days</option>
                     <option value="14">14 Days</option>
-                </select>               
+                </select>
                 <span asp-validation-for="DeskQuote.Shipping" class="text-danger"></span>
             </div>
             <div class="form-group-submit">
