--- a/MegaDesk/MegaDesk/Pages/Quotes/Index.cshtml
+++ b/MegaDesk/MegaDesk/Pages/Quotes/Index.cshtml
@@ -5,72 +5,79 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1 class="title_page">Quotes</h1>
 
-<p>
+<p class="add_btn">
     <a asp-page="Create">Add New Quote</a>
 </p>
 
-<form>
-    <p class="form_search">
-        Search by:
-        <select asp-for="SearchSelection" name="searchSelection">
-            <option value="">All</option>
-            <option value="CustomerName">Customer Name</option>
-        </select>
-        <input type="text" asp-for="SearchString" />
-        <input type="submit" value="Filter" class="filter_btn" />
-    </p>
-</form>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                <a asp-page="./Index" asp-route-sortOrder="@Model.DateSort" class="short_info">
-                    @Html.DisplayNameFor(model => model.DeskQuote[0].Date)
-                </a>
-            </th>
-            <th>
-                <a asp-page="./Index" asp-route-sortOrder="@Model.CustomerNameSort" class="short_info">
-                    @Html.DisplayNameFor(model => model.DeskQuote[0].CustomerName)
-                </a>
-            </th>
-            <th>
-                <a class="short_info">
-                    @Html.DisplayNameFor(model => model.DeskQuote[0].Cost)
-                </a>
-            </th>
-            <th>
-                <a class="short_info">
-                    @Html.DisplayNameFor(model => model.DeskQuote[0].Area)
-                </a>
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model.DeskQuote) {
-    //item.Cost = item.totalCalc();
-    //item.Area = item.areaCalc();
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Date)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CustomerName)
-            </td>
-            <td>
-                $@Html.DisplayFor(modelItem => item.Cost)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Area) sq in
-            </td>
-            <td>
-                <a asp-page="./Edit" asp-route-id="@item.ID">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.ID">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.ID">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+
+
+
+<div class="container_quotes">
+    <form>
+        <p class="form_search">
+            Search by:
+            <select asp-for="SearchSelection" name="searchSelection">
+                <option value="">All</option>
+                <option value="CustomerName">Customer Name</option>
+            </select>
+            <input type="text" asp-for="SearchString" />
+            <input type="submit" value="Filter" class="filter_btn" />
+        </p>
+    </form>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>
+                    <a asp-page="./Index" asp-route-sortOrder="@Model.DateSort" class="short_info">
+                        @Html.DisplayNameFor(model => model.DeskQuote[0].Date)
+                    </a>
+                </th>
+                <th>
+                    <a asp-page="./Index" asp-route-sortOrder="@Model.CustomerNameSort" class="short_info">
+                        @Html.DisplayNameFor(model => model.DeskQuote[0].CustomerName)
+                    </a>
+                </th>
+                <th>
+                    <a class="short_info">
+                        @Html.DisplayNameFor(model => model.DeskQuote[0].Cost)
+                    </a>
+                </th>
+                <th>
+                    <a class="short_info">
+                        @Html.DisplayNameFor(model => model.DeskQuote[0].Area)
+                    </a>
+                </th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model.DeskQuote)
+            {
+                //item.Cost = item.totalCalc();
+                //item.Area = item.areaCalc();
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Date)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.CustomerName)
+                    </td>
+                    <td>
+                        $@Html.DisplayFor(modelItem => item.Cost)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Area) sq in
+                    </td>
+                    <td>
+                        <a asp-page="./Edit" asp-route-id="@item.ID">Edit</a> |
+                        <a asp-page="./Details" asp-route-id="@item.ID">Details</a> |
+                        <a asp-page="./Delete" asp-route-id="@item.ID">Delete</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+
+</div>
