--- a/MegaDesk/MegaDesk/wwwroot/css/site.css
+++ b/MegaDesk/MegaDesk/wwwroot/css/site.css
@@ -32,22 +32,72 @@ a {
     background: #aaa;
     color: #fff;
 }
-/* Kisuk Work
---------------------------------------------------*/
+
+
+/*///////////////////////////////////*/
+/* ////////////// OUR CSS  //////////*/
+/*///////////////////////////////////*/
+
+
 body {
     background: url(../img/background_office.jpg) no-repeat;
 }
+
+.title_page {
+    margin-bottom: 3%;
+}
+
+.table{
+    margin-top: 3%;
+}
+
+.table thead th {
+    border-bottom: 1px solid black;
+}
+
+.table th {
+    color: black;
+    font-weight: 500;
+    background-color: rgb(211,211,211);
+
+}
+
+.short_info {
+    color: black;
+    text-decoration: underline;
+    font-weight: 700;
+}
+
+.table tr:nth-child(odd) {
+    background-color: rgb(248,248,248);
+    color: rgb(48,48,48);
+}
+
+.table tr:nth-child(even) {
+    background-color: rgb(232,232,232);
+    color: rgb(48,48,48);
+}
+
 .container {
     background: rgba(246,246,246,0.75);
 }
+
+.container_quotes{
+    margin-left: 2%;
+}
+
+.add_btn {
+    padding: .5%;
+    max-width: 15%;
+    text-align: center;
+    border: 1.5px solid #1c7dde;
+}
+
 .pb-3 {
     overflow: hidden;
 }
-.pb-3 > p {
-    display: inline;
-    float: left;
-    min-width: 200px;
-}
+
+
 .img_surface{
     width: 40%;
 }
@@ -61,43 +111,53 @@ body {
     grid-template-columns: auto auto auto auto auto auto;
     grid-gap: 10px;
 }
+
 .form-group-radio > img:hover {
     transform: scale(5);
     z-index: 10;
 }
+
 .col-md-4 {
     margin: 0 auto;
 }
+
 .form-group-submit > input[type=submit]{
     min-width: 200px;
     display: block;
     margin: 0 auto;
 }
+
 .row {
     width: 80%;
     background: rgba(230,230,230,0.75);
     padding: 10px;
     margin: 0 auto;
 }
+
 .sub-title {
     color: #1B6EC2;
 }
+
 .warning { 
     color: #C21B1B;
 }
+
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
   font-size: 14px;
 }
+
 @media (min-width: 768px) {
   html {
     font-size: 16px;
   }
 }
+
 .border-top {
   border-top: 1px solid #e5e5e5;
 }
+
 .border-bottom {
   border-bottom: 1px solid #e5e5e5;
 }
@@ -122,14 +182,15 @@ body {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
 }
+
 .footer {
   position: absolute;
   bottom: 0;
   width: 100%;
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
+  text-align:center;
 }
-
 
 header {
     margin-bottom:80px;
