--- a/SMPlanner/SMPlanner/Views/Speakers/Edit.cshtml
+++ b/SMPlanner/SMPlanner/Views/Speakers/Edit.cshtml
@@ -16,13 +16,13 @@
             
             <div class="form-group">
                 <label asp-for="Meeting.MeetingDate" class="control-label"></label>
-                <select asp-for="Meeting.MeetingDate" class="form-control" asp-items="ViewBag.MeetingDate"></select>
-                <span asp-validation-for="Meeting.MeetingDate" class="text-danger"></span>
+                <select asp-for="Meeting.MeetingDate" class="form-control" asp-items="ViewBag.MeetingID"></select>
+                <span asp-validation-for="Meeting.MeetingDate" class="text-danger" ></span>
             </div>
             
             <div class="form-group">
                 <label asp-for="AssignmentTopic.Topic" class="control-label"></label>
-                <select asp-for="AssignmentTopic.Topic" class="form-control" asp-items="ViewBag.Topic"></select>
+                <select asp-for="AssignmentTopic.Topic" class="form-control" asp-items="ViewBag.AssignmentTopicID"></select>
                 <span asp-validation-for="AssignmentTopic.Topic" class="text-danger"></span>
             </div>
             
