--- a/SMPlanner/SMPlanner/Views/Speakers/Create.cshtml
+++ b/SMPlanner/SMPlanner/Views/Speakers/Create.cshtml
@@ -12,15 +12,27 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            
+
+            @*<div class="form-group">
+            <label asp-for="Meeting.MeetingDate" class="control-label"></label>
+            <select asp-for="Meeting.MeetingDate" class ="form-control" asp-items="ViewBag.MeetingID"></select>
+        </div>*@
+
             <div class="form-group">
-                <label asp-for="Meeting.MeetingDate" class="control-label"></label>
-                <select asp-for="Meeting.MeetingDate" class ="form-control" asp-items="ViewBag.MeetingID"></select>
+                <label asp-for="Meeting" class="control-label"></label>
+                <select asp-for="MeetingID" class="form-control" asp-items="ViewBag.MeetingID">
+                    <option value="">-- Select Meeting --</option>
+                </select>
+                <span asp-validation-for="MeetingID" class="text-danger" />
             </div>
 
             <div class="form-group">
-                <label asp-for="AssignmentTopicID" class="control-label"></label>
-                <select asp-for="AssignmentTopicID" class ="form-control" asp-items="ViewBag.AssignmentTopicID"></select>
+                <label asp-for="AssignmentTopic" class="control-label"></label>
+                <select asp-for="AssignmentTopicID" class="form-control" asp-items="ViewBag.AssignmentTopicID">
+                    <option value="">-- Select Topic --</option>
+                </select>
+                <span asp-validation-for="AssignmentTopicID" class="text-danger" />
+
             </div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
