Adding CSS to final project

--- a/SMPlanner/SMPlanner/Views/Home/Index.cshtml
+++ b/SMPlanner/SMPlanner/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome to your Sacrament Meeting Planner</h1>
+    <p>Plan all your sacrament meetings right here with one easy to use website!</p>
 </div>
