--- a/SMPlanner/SMPlanner/Views/Shared/_Layout.cshtml
+++ b/SMPlanner/SMPlanner/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2021 - Sacrament meeting Planner - <a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a>
+            &copy; 2021 - Sacrament Meeting Planner - <a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
